# WinXound

./: .gitignore  README.md
Linux/: .anjuta_sym_db.db  AUTHORS.md  CMakeLists.txt  COPYING.md  History.md  History.txt  INSTALL.md  INSTALL_INFO_READ_ME_FIRST.md  INSTALL_INFO_READ_ME_FIRST.txt  Makefile.am  README  README-old.md  README.md  configure.ac  install-deps.sh
Linux/.anjuta/: associations
Linux/.anjuta/session/: anjuta.session  dock-layout.xml
Linux/WinXound/: winxound
Linux/WinXound/Cabbage/CabbageLinux/docs/: cabbage.html
Linux/WinXound/Cabbage/CodeRepository/0. User Code/: Instructions.udo
Linux/WinXound/Cabbage/CodeRepository/1. Cabbage Plants/: BasicFM.udo  MatrixPhaseModSynth.udo  SubtractiveSynth.udo
Linux/WinXound/Cabbage/CodeRepository/2. Cabbage Examples/: BasicFM.udo  Subtractive.udo
Linux/WinXound/Help/: atsa.html  dummy.txt  error.html  hetro.html  winxound_help.html
Linux/WinXound/Repository/0. User Code/: Instructions.udo
Linux/WinXound/Repository/1. Signal Generators/: ADSD.udo  BufFiPl1.udo  BufFiPl2.udo  BufFiPl4.udo  BufFiPl8.udo  BufPlay2.udo  BufPlay8.udo  FilePlay1.udo  FilePlay2.udo  Linek.udo  PartikkelSimpB.udo  pgmin.udo
Linux/WinXound/Repository/2. Signal Modifiers/: declick.udo  stereoAsymmetry.udo  stereoBalance.udo  stereoMpan.udo  stereoWidth.udo  trackerSplice.udo
Linux/WinXound/Repository/3. Utilities/: BufCt1.udo  BufCt2.udo  BufFiCt1.udo  BufFiCt2.udo  BufFiCt4.udo  BufFiCt8.udo  BufFiCtNd1.udo  BufFiCtNd2.udo  BufRec1.udo  BufRec2.udo  Counter.udo  F2M.udo  F2MC.udo  FreqByRatioTab.udo  KeyOnce.udo  KeyStay.udo  MS2S.udo  PhsEdge.udo  Scala.udo  Scali.udo  Scalk.udo  SinesToSSTI.udo  Stayed.udo  StrNumP.udo  StrayElMem.udo  StrayGetEl.udo  StrayLen.udo  StrayNumSum.udo  StrayRemDup.udo  StraySetNum.udo  TabPermRand_i.udo  TableDump.udo  TableToSF.udo  ftreverse.udo
Linux/scintilla/: SciLexer.h
Linux/scintilla/gtk/: PlatGTK.cxx  ScintillaGTK.cxx  ScintillaGTKAccessible.cxx
Linux/scintilla/src/: LexWinXound.cxx
Linux/scripts/: format.sh  lint.sh
Linux/src/: Makefile.am  gtkmm_compat.h  wx-about.cc  wx-about.cc~  wx-about.h  wx-analysis.cc  wx-analysis.cc~  wx-analysis.h  wx-analysis.h~  wx-browser.cc  wx-browser.h  wx-cabbage.cc~  wx-cabbage.h  wx-cabbagerepository.cc  wx-cabbagerepository.cc~  wx-cabbagerepository.h  wx-codeformatter.cc  wx-codeformatter.cc~  wx-codeformatter.h  wx-csoundrepository.cc  wx-csoundrepository.cc~  wx-csoundrepository.h  wx-document.cc~  wx-editor.cc  wx-editor.cc~  wx-editor.h  wx-editor.h~  wx-findandreplace.cc  wx-findandreplace.cc~  wx-findandreplace.h  wx-findcodestructure.cc  wx-findcodestructure.cc~  wx-findcodestructure.h  wx-findcodestructure.h~  wx-findline.cc  wx-findline.h  wx-global.cc  wx-global.cc~  wx-global.h  wx-importexport.cc  (+29 more)
MacOs/: ImageAndTextCell.h  ImageAndTextCell.mm  README.md  SeparatorCell.h  SeparatorCell.mm  TextEditorView.h  TextEditorView.mm  WinXound-Info.plist  WinXound_Prefix.pch  main.m  wxAbout.h  wxAbout.mm  wxAbout.xib  wxAnalysis.h  wxAnalysis.mm  wxAnalysisWindow.xib  wxAutoComplete.h  wxAutoComplete.mm  wxAutocompleteWindow.xib  wxCSoundRepository.h  wxCSoundRepository.mm  wxCSoundRepository.xib  wxCodeFormatter.h  wxCodeFormatter.mm  wxCodeRepository.h  wxCodeRepository.mm  wxCompiler.h  wxCompiler.mm  wxDocument.mm  wxFindAndReplace.h  wxFindAndReplace.mm  wxFindAndReplace.xib  wxFormatter.xib  wxGlobal.h  wxImportExport.h  wxImportExport.mm  wxMainController.h  wxMainController.mm  wxNode.h  wxNode.mm  (+9 more)
MacOs/Base.lproj/: MainMenu.xib  wxDocument.xib
MacOs/WinXound.xcodeproj/: project.pbxproj
MacOs/repository/: BufPlay1.udo  FileToPvsBuf.udo  FreqByCentTab.udo  FreqByEqScale.udo  PanPotStereo.udo  PartikkelSimpA.udo  SCReverb.udo  StrCntEls.udo  StrGetEl.udo  StrGetNum.udo  StrNmLstToFt.udo  StrNumMmb.udo  StrNumsSum.udo  TableToFile.udo  deflutter.udo  midiMonitor.udo  tap_tubewarmth.udo
MacOs/scintilla/cocoa/: PlatCocoa.mm  QuartzTextLayout.h  QuartzTextStyle.h  QuartzTextStyleAttribute.h  ScintillaCocoa.h  ScintillaCocoa.mm  ScintillaView.h  ScintillaView.mm
MacOs/scintilla/src/: LexWinXoundPython.cxx
Windows/: README.md  WinXound_Net.sln
Windows/RTConsole/: Program.cs  RTConsole.csproj  ReadMe.txt
Windows/RTConsole/Properties/: AssemblyInfo.cs
Windows/ScintillaTextEditor/: ReadMe.txt  ScintillaTextEditor.csproj  ScintillaTextEditor.sln  TextEditor.Designer.cs  TextEditor.cs  TextPrinter.cs  TextView.cs  TextViewOld.cs
Windows/ScintillaTextEditor/Properties/: AssemblyInfo.cs  Resources.Designer.cs
Windows/ScintillaTextEditor/winxound_lexers_for_scintilla/: LexWinXound.cxx  ReadMe.txt
Windows/WinXound_Net/: FileAccessRights.cs  FormAbout.Designer.cs  FormAbout.cs  FormAbout.resx  FormAnalysis.Designer.cs  FormAnalysis.cs  FormAnalysis.resx  FormFindAndReplace.Designer.cs  FormFindAndReplace.cs  FormFindLine.Designer.cs  FormFindLine.cs  FormInfo.Designer.cs  FormInfo.cs  FormInfo.resx  FormInputBox.Designer.cs  FormInputBox.cs  FormInsertHeader.Designer.cs  FormInsertHeader.cs  FormMain.Designer.cs  FormMain.cs  FormMain.resx  FormNew.Designer.cs  FormNew.cs  FormNew.resx  FormOrcScoLinks.Designer.cs  FormOrcScoLinks.cs  FormPlayer.Designer.cs  FormPlayer.cs  FormSettings.Designer.cs  FormSettings.cs  FormSettings.resx  FormSettingsAutoSearch.Designer.cs  FormSettingsAutoSearch.cs  Program.cs  Settings.cs  WinXound_Net.csproj  wxCSoundOpcodesRepository.Designer.cs  wxCSoundOpcodesRepository.cs  wxCodeFormatter.cs  wxCodeFormatterForm.Designer.cs  (+26 more)
(+22 files in other folders)
